# odroid-go-rs

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: audio.rs  backlight.rs  display.rs  font.rs  gbuf.rs  keypad.rs  lib.rs  sdcard.rs  text_render.rs  utf8_gb2312.rs
tools/: base_code_table.txt  build_font.py  extras.json  mkfw.py
